--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,11 +1,16 @@
 .header{
     width: 100%;
-    height: 10vw;
     color: #fff;
-    background-color: #cecece;
+    background-color: #000;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 5vw;
     font-weight: 600;
+}
+.menu{
+    width: 100%;
+    padding: 3vw 3vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
