--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,16 +1,12 @@
-.header{
+.header header > div{
     width: 100%;
     color: #fff;
-    background-color: #000;
+    background-color: #474747;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 600;
 }
-.menu{
-    width: 100%;
-    padding: 3vw 3vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.header header > button{
+    color: #fff;
 }
