--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -2,9 +2,14 @@
     direction: rtl;
     margin: 0;
     padding: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
     font-size: 18px;
 }
 body{
     font-family: 'Assistant', sans-serif; 
+}
+.main{
+    height: 100vw;
+    width: 100%;
+    background: linear-gradient(red,yellow);
 }
