--- a/src/components/drawer/drawer.css
+++ b/src/components/drawer/drawer.css
@@ -8,3 +8,13 @@ color: #fff;
     align-items: center;
     justify-content: center;
 }
+.MuiDrawer-paper {
+    width: 20vw;
+}
+.MuiListItem-button {
+    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    justify-content: center;
+}
+.drawerHeader .MuiSvgIcon-root{
+    width: 3vw;
+}
