--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -20,7 +20,7 @@
     font-size: 3vw;
     text-align: center;
     line-height: 0.85;
-    text-shadow: 0 0 4px #fff;
+    /* text-shadow: 0 0 4px #fff; */
 }
 .mainLogo span{
     font-size: 2vw;
