--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -3,36 +3,22 @@
     color: #fff;
     background-color: #000;
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
     font-size: 5vw;
     font-weight: 600;
     color: #fff;
     padding: 2vw 3vw;
     flex-direction: row-reverse;
+    text-align: center;
 }
 .rightFooter{
 flex: 1;
-text-align: left;
+text-align: center;
 }
 .rightFooter h3{
     font-size: 3vw;
 }
 .rightFooter p{
-    font-size: 2vw;
-}
-.leftFooter{
-    flex: 1 1;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin-top: 1vw;
-}
-.leftFooter p{
-    font-size: 3vw;
-    line-height: 0.85;
-    text-align: center;
-}
-.leftFooter p span{
     font-size: 2vw;
 }
