--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -10,5 +10,5 @@ body{
 .main{
     height: 100vw;
     width: 100%;
-    background: linear-gradient(rgb(52, 40, 40),yellow);
+    background: #000;
 }
