--- a/src/components/timeCounter/timeCounter.css
+++ b/src/components/timeCounter/timeCounter.css
@@ -1,12 +1,49 @@
 .timeCounter{
     width: 100%;
-    height: 20vw;
-    background-color: red;
+    height: 6vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    top: 58vw;
+    left: 0;
 }
 .timeCounter p{
     font-size: 2vw;
     color: #fff;
+}
+.wrapperConter{
+    width: 40vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.counterItem{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+.counterItem:last-child::before{
+    display: none;
+}
+.counterItem::before{
+    content: ':';
+    font-size: 4.5vw;
+    display: block;
+    position: absolute;
+    top: -0.2vw;
+    right: 0;
+    color: #fff;
+}
+.num{
+    font-size: 5vw;
+}
+.txt{
+    font-size: 1vw;
+    position: relative;
+    top: -1vw;
 }
