--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Assistant', sans-serif; 
 }
 .main{
-    height: 100vw;
+    height: fit-content;
     width: 100%;
     background: #000;
 }
